2003/10/26 11:36 muppetman

	* GSignal.xs: some apidoc comments to play around with
	* GenPod.pm: sigils don't go in %basic_types, they're added by
	convert_return_type as needed.  count the number of properties we
	find that match this type, to return an empty string if this type
	has none of its own.  added some developers' pod for the various
	helper functions.  allow 'for' on signature and arg lines.  show
	default argument values in call signatures.
	* Makefile.PL: install GenPod.pm.  its manpage will be nonsense
	for now.
	* xsdoc2pod.pl: typo
	* xsdocparse.pl: split & duplicate aliased xsubs automagically.
	match up apidoc pods and xsubs.

2003/10/25 21:44 rwmcfa1

        * GType.xs: can't call newSVpv if package name is not valid, shouldn't
        happen so croak on that error. some improved error checking to make
        sure that we have a valid interface and that our class is
        instantiatable, may need to double check.

        * apidoc.pl: get rid of the groups stuff since it's not used

        * xsdocparse.pl: get rid of the groups stuff since it's not used.

        * GenPod.pm: initial import
        added blurb retrieval

	* xsdoc2pod.pl: initial import

2003/10/24 17:18 muppetman

	* xsdocparse.pl: new file.  program extracts pod and xsub signatures
	from XS files and dumps a big honkin' data structure to stdout.
	differentiates between the C section and the xsub section, and looks
	for a new set of pod directives, e.g. =for apidoc and =for object.
	this is destined to be the heart of the shiny new automatically
	generated api reference documentation.  more on this later.

	* apidoc.pl, Makefile.PL: use xsdocparse.pl instead of podselect
	to extract pod used to build xsapi.pod.

	* GType.xs: new function Glib::Type->package_from_cname() turns
	a c type name into registered Perl package name, if found.
	also added some =for apidoc pod to test out xsdocparse.pl.

2003/10/23 16:04 rwmcfa1
